[gd_scene load_steps=4 format=3 uid="uid://dcv871dmo8rwc"]

[ext_resource type="Script" path="res://scenes/blowjob.gd" id="1_savth"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="1_wis0u"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_in61d"]

[node name="Blowjob" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_savth")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("1_wis0u")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_in61d")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Deckard: I was hoping to see you again soon. I got something extra for our little deal today.", "Vesper: Oh, have you?", "Deckard: Yes, look at what I’ve got over that shelf over there.", "You look at the shelf he’s pointing at, and you see a bag full of blood. ", "Your eyes start to glimmer.", "Vesper: Now, you have outdone yourself, Mr. Deckard. Today you get special treatment.", "Vesper: Pull your pants down and sit, you know what’s coming.", "Deckard: Oh, my.", "He sits down, you take everything off except your panties. ", "Vesper: You’ve been a good, good boy. ", "You kneel in front of him and start licking the base of his shaft while playing with his balls.", "Vesper: Here’s your reward. Just relax and feel my tongue as I lick and suck your cock as much as you want. Today my mouth’s all yours.", "You say that, but he’s so hard already, you don’t think he can take too much of this.", "Vesper: The first time we met you had a hard time getting it on, now at the first sight of my tits you’re already this hard.", "Deckard: It’s all about the attitude, you’re much bolder, I love that.", "Vesper: I know you do. And I know you’ll love cumming into my mouth as well. Won’t you?", "Not giving him any time to answer you swallow his cock whole. ", "His cock’s massaging the back of your throat, but you don’t feel like gagging at all.", "You keep eye contact while going up and down, from the head to the base.", "It’s almost time, he just needs a little push.", "You stop sucking and start stroking his saliva-filled cock.", "Vesper: Your cock is so delicious, I wish I could take it home to suck it every day. If I knew how good it felt in my throat, I would’ve sucked you right from the start.", "Vesper: Do you want me to drink your cum? To swallow it all down? ", "Deckard: Yes! I want to see you swallowing it!", "Vesper: Then fill my mouth with that hot milk.", "You savagely lick the tip of his head waiting for him to explode.", "Deckard: I’m cumming! Aaaaaahhhhh!!!", "He cums so intensively that some jizz drips from the side of your mouth.", "You scoop it up with your fingers and put it back on your tongue.", "Vesper: I’m not letting any of this delicious protein go to waste, Mr. Deckard. ", "Deckard: That was one of the best blowjobs I’ve ever had in my life, your mouth is superb.", "Vesper: I’ll come suck you off whenever you want me to, if you keep these gifts coming.", "While you’re still licking his shaft he asks.", "Deckard: What do you do with that blood, anyway?", "Vesper: Oh, this… ", "You open up a vial and drink some of it.", "You see, I have a rare case of hematophagy, like bats.", "So I have to ingest some fresh blood from time to time or I get very, very sick.", "Vesper: You wouldn’t want your little cocksucker to get sick, would you, Mr. Deckard? I wouldn’t be able to visit you anymore.", "He’s so enamored and delighted by your services that he’d probably believe anything you said. ", "You’ve got him by the balls, literally. ", "Deckard: I’m not a scientist or anything, but… I guess it’s possible. Bats and humans, we’re all mammals after all.", "Vesper: It’s a very rare condition, even the doctors don’t fully understand it yet.", "Vesper: Anyway, I’ll be taking that blood bag you’ve got in store for me. I’ll prepare something even better for next time… if you get my drift. ", "You grasp his cock with force constricting it between your thumb and index finger. ", "Slowly sliding it down his shaft from head to base, simulating what you’ll do to him.", "Vesper: Make sure you come prepared, you’re a big boy, and I’m very hungry these past few days.", "Vesper: Just remember you’re the one that started all this, there’s no backing down now from our deal.", "He forcefully swallows.", "Deckard: I think I understand. ", "Vesper: I’ll be going now, then. See you soon, Mr. Deckard.", "He unlocks the door and you leave him be. His expression’s a mixture of perplexity and joy.", "--- END OF BLOWJOB --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1
